Bug 99874 - gtk3 black cursor when using crop
Summary: gtk3 black cursor when using crop
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.3.2 release
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-16 09:20 UTC by Julien Nabet
Modified: 2016-10-25 19:02 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2016-05-16 09:20:54 UTC
On pc Debian x86-64 with master sources updated yesterday or with LO Debian package 5.1.3.2rc + gtk3 only, crop cursor is a black rectangle.

Steps to reproduce:
- Create brand new file on Writer
- insert any image
- right click on image and select Crop
- try to crop
=> the cursor is a black rectangle

I only have this with gtk3, not with gtk, kde4 or gen.
Comment 1 Buovjaga 2016-05-20 10:45:48 UTC
Repro with gtk3

Arch Linux 64-bit, KDE Plasma 5
Version: 5.2.0.0.alpha1+
Build ID: 6c785f65ea5cc961c0a079455973f3086731b2c9
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on May 20th 2016
Comment 2 Julien Nabet 2016-05-20 11:50:14 UTC
Buovjaga: thank you for having confirmed the bug!

Caolán: since it concerns gtk3, thought you might be interested in this one.
Comment 3 Commit Notification 2016-05-23 14:03:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=81a8d1250319023f6ca272e0b233ef638cae40f7

Resolves: tdf#99874 gtk3: all-black xbm cursors

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2016-05-24 19:30:12 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.

Thank you Caolán!

(I tried to backport to 5.1 branch but there was a conflict and git diff returned a lof of differences).
Comment 5 Commit Notification 2016-05-26 08:22:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fffe6ce631502ee846de103be70e763c567a2678&h=libreoffice-5-1

Resolves: tdf#99874 gtk3: all-black xbm cursors

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.