Resolves: tdf#99874 gtk3: all-black xbm cursors

Change-Id: I1feca80dd75f7a09e05ac43293e8645da391a775